# agentic_document_classifier

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  analyse_prompt.md  analyse_pydantic.md  banking_classifier_agent.py  banking_classifier_prompt.md  base_agent.py  classify_documents.py  customs_classifier_agent.py  freight_classifier_agent.py  freight_classifier_prompt.md  hr_classifier_agent.py  invoice_classifier_agent.py  invoice_classifier_prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  taxes_classifier_agent.py  taxes_classifier_prompt.md  triage_agent.py  triage_prompt.md
.github/workflows/: ci.yml
docs/: installation.md  quickstart.md
examples/: example_usage.py
src/agentic_document_classifier/: __init__.py  agents.py  pretty_print.py
src/agentic_document_classifier/agents/: __init__.py  base_agent.py  triage_agent.py
src/agentic_document_classifier/agents/specialized/: __init__.py  banking_classifier_agent.py  customs_classifier_agent.py  freight_classifier_agent.py  hr_classifier_agent.py  invoice_classifier_agent.py  taxes_classifier_agent.py
src/agentic_document_classifier/cli/: __init__.py  classify_documents.py
src/agentic_document_classifier/prompts/: __init__.py  analyse_prompt.md  banking_classifier_prompt.md  convert_prompt.md  customs_classifier_prompt.md  hr_classifier_prompt.md  orchestration_prompt.md  triage_prompt.md
tests/: __init__.py  test_agents.py  test_package_structure.py
