[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic_document_classifier"
version = "0.4.0"
description = "Intelligent document classification system using AI agents based on Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Agentic Document Classifier Team" }]
maintainers = [{ name = "Agentic Document Classifier Team" }]
keywords = [
    "document-classification",
    "ai-agents",
    "gemini",
    "pydantic-ai",
    "pdf-processing",
    "document-intelligence",
    "business-documents",
    "llm",
    "multi-agent-system",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic>=2.0.0",
    "google-genai>=0.3.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = ["sphinx>=6.0.0", "sphinx-rtd-theme>=1.2.0", "myst-parser>=1.0.0"]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "pytest-mock>=3.10.0"]

[project.urls]
Homepage = "https://github.com/kindalus/agentic_document_classifier"
Documentation = "https://github.com/kindalus/agentic_document_classifier#readme"
Repository = "https://github.com/kindalus/agentic_document_classifier.git"
"Bug Tracker" = "https://github.com/kindalus/agentic_document_classifier/issues"
Changelog = "https://github.com/kindalus/agentic_document_classifier/blob/main/CHANGELOG.md"

[project.scripts]
agentic-classify = "agentic_document_classifier.cli.classify_documents:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_document_classifier"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["agentic_document_classifier"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["genai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
